added producing xls and csv files with student grades grouped by subjects functionality