@@ -1,9 +1,12 @@
 package com.school.service;
 
+import com.school.model.ClassWithStudentsDto;
+import com.school.model.SubjectGradesDTO;
 import com.school.repository.GradeRepository;
 import com.school.repository.SchoolClassRepository;
 import com.school.repository.StudentRepository;
 import com.school.repository.SubjectRepository;
+import com.school.service.utils.QueryResultsMappingUtils;
 import com.schoolmodel.model.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,9 +17,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class SchoolManagingService {
@@ -60,7 +61,6 @@ public class SchoolManagingService {
                     if (currentRandomizedClass.assignStudent2Class(currentStudent)) {
                         log.info("Student added: {}\nto class: {}", currentStudent, currentRandomizedClass.className());
                     }
-                    //TODO: check if it works without below saving to repository!
                     schoolClassRepository.save(currentRandomizedClass);
                 } else {
                     log.warn("Improper student record format, adding to database omitted!");
@@ -78,15 +78,11 @@ public class SchoolManagingService {
 
     public List<SubjectGradesDTO> getSubjectGradesForStudent(Long studentId) {
         log.info("Getting grades for students grouped by subjects..");
-        List<Object[]> results = gradeRepository.findAllGradesGroupedBySubjectForStudent(studentId);
+        List<Object[]> results = gradeRepository.findAllGradesGroupedBySubject(studentId);
         try {
-            return results.stream().map(result -> {
-                String studentName = (String) result[0];
-                String subject = (String) result[1];
-                String grades = (String) result[2];
-                BigDecimal average = (BigDecimal) result[3];
-                return new SubjectGradesDTO(studentName, subject, grades, average);
-            }).collect(Collectors.toList());
+            return results.stream()
+                    .map(QueryResultsMappingUtils::buildSubjectGradesObject)
+                    .toList();
         } catch (Exception e) {
             log.error(e.getMessage());
             log.error(Arrays.toString(e.getStackTrace()));
@@ -141,38 +137,16 @@ public class SchoolManagingService {
         return studentRepository.findAll();
     }
 
-    public Grade addGrade(Grade grade) {
-        log.info("Adding grade {} to student {} to subject {}", grade.getGradeValue(), grade.getStudent(), grade.getSubject());
-        return gradeRepository.save(grade);
-    }
 
-    public Grade addGrade(int grade, String subject, String studentCode) {
-        log.info("Adding grade {} to student's code {} to subject {}", grade, studentCode, subject);
-        Optional<Subject> subjectFound = subjectRepository.findFirstByName(subject);
-        if (subjectFound.isPresent()) {
-            Optional<Student> studentFound = studentRepository.findStudentByCode(studentCode);
-            if (studentFound.isPresent()) {
-                log.info(studentFound.get().getName() + " " + studentFound.get().getSurname() + " found based on code!");
-                if (grade > 0 && grade < 6) {
-                    return gradeRepository.save(new Grade(
-                            grade,
-                            studentFound.get(),
-                            subjectFound.get())
-                    );
-                } else {
-                    String message = "Assigning " + grade + " blocked as it is improver value!";
-                    log.error(message);
-                    throw new IllegalArgumentException(message);
-                }
-            } else {
-                String message = "Cannot find " + studentCode + " student code to assign grade to!";
-                log.error(message);
-                throw new IllegalArgumentException(message);
-            }
-        } else {
-            String message = "Cannot find " + subject + " subject to assign grade to!";
-            log.error(message);
-            throw new IllegalArgumentException(message);
+    public List<ClassWithStudentsDto> getClassesWithStudents() {
+        try {
+            return schoolClassRepository.findStudentsGroupedIntoClasses().stream()
+                    .map(QueryResultsMappingUtils::buildClassWithStudentsObject)
+                    .toList();
+        } catch (Exception e) {
+            log.error(e.getMessage());
+            e.printStackTrace();
+            throw new RuntimeException(e);
         }
     }
 }
